repos/makepy/contents/test/fail/Quote2.rules
# Execution error

all:
    print(q("$( x )"))
